--- a/KPU_T/app/src/main/res/layout/fragment_mypage.xml
+++ b/KPU_T/app/src/main/res/layout/fragment_mypage.xml
@@ -15,35 +15,54 @@
         android:layout_marginTop="0dp"
         android:id="@+id/scrollView">
 
+        ProfileImage
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
-            <ImageView
-                android:id="@+id/ProfileImage"
+
+            <LinearLayout
                 android:layout_width="130dp"
                 android:layout_height="130dp"
+                android:id="@+id/ProfileImage"
                 android:layout_marginStart="33dp"
                 android:layout_marginTop="40dp"
-                android:background="@drawable/no_image_camera_117dp"
+                android:background="@drawable/profile_border"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="vertical"
+                >
+                <ImageView
+                    android:id="@+id/profile_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:background="@drawable/no_image_camera_117dp"
+                    android:layout_weight="9"
+                    />
+                <ImageView
+                    android:id="@+id/profile_image2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="No Image"
+                    android:textStyle="italic"
+                    android:id="@+id/textview_noimage"
+                    android:gravity="center"
+                    android:textSize="20dp"
+                    android:textColor="#ff0000"
+                    />
+            </LinearLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_imageSetting"
-                app:layout_constraintTop_toBottomOf="@+id/Nickname"
-                app:layout_constraintBottom_toTopOf="@+id/layout_numberone"
-                app:layout_constraintStart_toEndOf="@+id/ProfileImage"
-                android:layout_marginBottom="40dp"
-                android:text="프로필 수정"
-                android:textColor="#ffffff"
-                android:textSize="20sp"
-                android:background="@drawable/button_border"
-                />
+          
+
+
 
             <TextView
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="60dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -195,47 +214,7 @@
                     />
             </LinearLayout>
 
-            <LinearLayout
-                android:layout_marginTop="40dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/layout_numberthree"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:id="@+id/layout_numberfour"
-                android:orientation="vertical"
-                >
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="광고 배너"
-                    android:gravity="center"
-                    android:textSize="50sp"
-                    android:id="@+id/textview1"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="광고 배너"
-                    android:gravity="center"
-                    android:textSize="50sp"
-                    android:id="@+id/textview2"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="광고 배너"
-                    android:gravity="center"
-                    android:textSize="50sp"
-                    android:id="@+id/textview3"
-                    />
-
-
-
-            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
