--- a/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
+++ b/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/startTV"
+        android:id="@+id/bdstartTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -49,7 +49,7 @@
         android:hint="출발지를 입력하세요"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/startTV"
+        app:layout_constraintStart_toEndOf="@id/bdstartTV"
         app:layout_constraintTop_toBottomOf="@id/cfRoomName" />
 
     <TextView
@@ -62,7 +62,7 @@
         android:text="도착지 : "
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/startTV" />
+        app:layout_constraintTop_toBottomOf="@id/bdstartTV" />
 
     <EditText
         android:id="@+id/endET"
