--- a/KPU_T/app/src/main/res/layout/fragment_mypage.xml
+++ b/KPU_T/app/src/main/res/layout/fragment_mypage.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="0dp"
         android:id="@+id/scrollView">
 
-        ProfileImage
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -45,6 +45,7 @@
                     android:layout_height="match_parent"
                     android:visibility="gone"
                     />
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -57,7 +58,20 @@
                     />
             </LinearLayout>
 
-          
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/btn_imageSetting"
+                app:layout_constraintTop_toBottomOf="@+id/Nickname"
+                app:layout_constraintBottom_toTopOf="@+id/layout_numberone"
+                app:layout_constraintStart_toEndOf="@+id/ProfileImage"
+                android:layout_marginBottom="40dp"
+                android:text="이미지 넣기"
+                android:textColor="#ffffff"
+                android:textSize="20sp"
+                android:background="@drawable/button_border"
+                />
 
 
 
