--- a/KPU_T/app/src/main/res/layout/activity_bbody.xml
+++ b/KPU_T/app/src/main/res/layout/activity_bbody.xml
@@ -54,7 +54,7 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="몇시쯤 출발하시죠? 23 여"
+        android:hint="댓글을 입력해주세요"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/replysavebtn"
         app:layout_constraintHorizontal_bias="0.458"
