--- a/KPU_T/app/src/main/res/layout/activity_bbody.xml
+++ b/KPU_T/app/src/main/res/layout/activity_bbody.xml
@@ -59,7 +59,7 @@
         app:layout_constraintEnd_toStartOf="@+id/replysavebtn"
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updatebtn" />
+        app:layout_constraintTop_toBottomOf="@+id/boardupdatebtn" />
 
     <Button
         android:id="@+id/replysavebtn"
@@ -69,7 +69,7 @@
         android:layout_marginEnd="16dp"
         android:text="댓글 저장"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/deletebtn" />
+        app:layout_constraintTop_toBottomOf="@+id/boarddeletebtn" />
 
     <ListView
         android:id="@+id/replyLV"
@@ -107,23 +107,23 @@
         app:layout_constraintTop_toBottomOf="@+id/bdstartTV" />
 
     <Button
-        android:id="@+id/updatebtn"
+        android:id="@+id/boardupdatebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:text="수정"
+        android:text="게시글 수정"
         android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@+id/deletebtn"
+        app:layout_constraintEnd_toStartOf="@+id/boarddeletebtn"
         app:layout_constraintTop_toBottomOf="@+id/boardbodyTV" />
 
     <Button
-        android:id="@+id/deletebtn"
+        android:id="@+id/boarddeletebtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:text="삭제"
+        android:text="게시글 삭제"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/boardbodyTV" />
