--- a/KPU_T/app/src/main/res/menu/menu.xml
+++ b/KPU_T/app/src/main/res/menu/menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item android:id="@+id/deleteMenu"
-    android:title="내가 만든 채팅방 삭제" />
+    android:title="내 채팅방 삭제" />
 </menu>
