--- a/KPU_T/app/src/main/res/layout/activity_set_image.xml
+++ b/KPU_T/app/src/main/res/layout/activity_set_image.xml
@@ -34,11 +34,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No Image"
+            android:text="이미지를 선택해주세요"
             android:textStyle="italic"
             android:id="@+id/setImage_textview_noimage"
             android:gravity="center"
-            android:textSize="30dp"
+            android:textSize="25dp"
             android:textColor="#ff0000"
             />
     </LinearLayout>
