--- a/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
+++ b/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
@@ -7,12 +7,13 @@
     <TextView
         android:id="@+id/tvBoardTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
-        android:text="게시판 제목 : "
+        android:layout_marginTop="26dp"
         android:padding="6dp"
-        android:textSize="20sp"
+        android:text="게시판 제목 : "
+        android:gravity="center"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,6 +21,7 @@
         android:id="@+id/cfRoomName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="16dp"
         android:hint="게시판 제목을 입력하세요"
@@ -31,11 +33,12 @@
     <TextView
         android:id="@+id/bdstartTV"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="15dp"
-        android:text="출발지 : "
+        android:layout_marginTop="10dp"
         android:padding="6dp"
+        android:text="출발지 : "
+        android:gravity="center"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvBoardTitle" />
@@ -44,6 +47,7 @@
         android:id="@+id/startET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:hint="출발지를 입력하세요"
@@ -55,10 +59,11 @@
     <TextView
         android:id="@+id/endTV"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:padding="6dp"
+        android:gravity="center"
         android:text="도착지 : "
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +73,7 @@
         android:id="@+id/endET"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="16dp"
         android:hint="도착지를 입력하세요"
@@ -79,11 +85,12 @@
     <TextView
         android:id="@+id/bodyTV"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="14dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:padding="6dp"
         android:text="내용 : "
+        android:gravity="top|center"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/endTV" />
@@ -92,11 +99,13 @@
         android:id="@+id/bodyET"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:gravity="start|top"
         android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/finishfab"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bodyTV"
         app:layout_constraintTop_toBottomOf="@id/endET" />
