--- a/KPU_T/app/src/main/res/layout/item_reply.xml
+++ b/KPU_T/app/src/main/res/layout/item_reply.xml
@@ -8,9 +8,12 @@
     <TextView
         android:id="@+id/replynameTV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="닉네임이들어가요"
+        android:gravity="center"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,10 +22,14 @@
     <TextView
         android:id="@+id/replybodyTV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="내용이 들어갈 텍스트뷰입니다"
-        android:textSize="12sp"
+        android:gravity="center"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/replydeletebtn"
         app:layout_constraintStart_toEndOf="@+id/replynameTV"
@@ -34,7 +41,8 @@
         android:layout_height="wrap_content"
         android:text="댓글삭제"
         android:textSize="14sp"
-        android:visibility="gone"
+        android:background="@drawable/round"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
