--- a/KPU_T/app/src/main/res/layout/activity_main_1.xml
+++ b/KPU_T/app/src/main/res/layout/activity_main_1.xml
@@ -15,6 +15,26 @@
     >
 
 
+    <CheckBox
+        android:id="@+id/autoLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/saveid"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="자동 로그인"
+        android:textSize="20sp" />
+
+    <CheckBox
+        android:id="@+id/saveid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textview_btn_idpassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:text="ID 저장"
+        android:textSize="20sp" />
+
     <TextView
         android:layout_marginTop="110dp"
         android:layout_width="wrap_content"
@@ -79,15 +99,7 @@
         android:textSize="20sp"
         />
 
-    <CheckBox
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/textview_btn_idpassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/autoLogin"
-        android:text="자동 로그인"
-        android:textSize="20sp"
-        android:layout_marginTop="30dp"/>
+
 
     <Button
 
