--- a/KPU_T/app/src/main/res/layout/activity_gong_g.xml
+++ b/KPU_T/app/src/main/res/layout/activity_gong_g.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".GongG">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:padding="8dp"
+        tools:layout_editor_absoluteX="0dp"
+        android:id="@+id/listview"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+        android:layout_width="295dp"
+        android:layout_height="82dp"
+        android:id="@+id/selectName" android:layout_marginTop="44dp"
+        app:layout_constraintTop_toBottomOf="@+id/listview"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
+        android:hint="목록에서 선택하세요."/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
