--- a/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
+++ b/KPU_T/app/src/main/res/layout/activity_carfull_board_setting.xml
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:hint="출발지를 입력하세요"
         android:textSize="15sp"
@@ -74,7 +74,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="16dp"
         android:hint="도착지를 입력하세요"
         android:textSize="15sp"
@@ -100,10 +100,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:gravity="start|top"
+        android:background="@drawable/edge"
+        android:padding="5dp"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/finishfab"
         app:layout_constraintEnd_toEndOf="parent"
