--- a/KPU_T/app/src/main/res/layout/fragment_mypage.xml
+++ b/KPU_T/app/src/main/res/layout/fragment_mypage.xml
@@ -59,30 +59,16 @@
             </LinearLayout>
 
 
-
-
-            <TextView
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="60dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="닉네임 : "
-                android:textColor="#140308"
-                android:textSize="20sp"
-                android:id="@+id/Nickname"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="125dp"
+                android:layout_marginLeft="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/Nickname2"
                 android:text="UnKnown"
                 android:textSize="20sp"
-                app:layout_constraintStart_toEndOf="@+id/Nickname"
+                app:layout_constraintStart_toEndOf="@+id/ProfileImage"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toTopOf="@+id/layout_numberone"
                 />
