--- a/KPU_T/app/src/main/res/layout/item_reply.xml
+++ b/KPU_T/app/src/main/res/layout/item_reply.xml
@@ -41,7 +41,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/deletereply"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
