--- a/KPU_T/app/src/main/res/layout/activity_main.xml
+++ b/KPU_T/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="#ffffff"
-    >
+    android:orientation="vertical">
+
+    <androidx.viewpager.widget.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:id="@+id/viewpager_main"
+        android:layout_weight="9"
+        />
 
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabs_main"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:background="@android:color/white"
+        android:layout_weight="1"
+        app:tabRippleColor="#FFFFA500"
+        app:tabIndicatorColor="#FFFFa500"
+        app:tabSelectedTextColor="#FFFFa500"
+        />
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:layout_centerInParent="true"
-       >
-
-       <ImageView
-           android:layout_width="230dp"
-           android:layout_height="230dp"
-           android:src="@drawable/taxi_logo1"
-           android:id="@+id/imageview1"
-           android:layout_centerInParent="true"
-            android:background="@drawable/round_shape"
-           />
-
-       <TextView
-           android:layout_marginTop="110dp"
-           android:layout_width="wrap_content"
-           android:layout_below="@+id/imageview1"
-           android:layout_height="wrap_content"
-           android:text="KPU Taxi"
-           android:fontFamily="@font/maple_bold"
-           android:layout_centerHorizontal="true"
-           android:textColor="#ffffa500"
-           android:id="@+id/textview1"
-           android:textSize="80sp"
-           />
-
-
-
-   </RelativeLayout>
-
-
-
-</RelativeLayout>
+</LinearLayout>
